iptables/iptables34
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# 1. 基础必备放行
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT

# 2. VOS 业务通用端口放行
-A INPUT -p udp --dport 5060 -j ACCEPT
-A INPUT -p tcp --dport 5060 -j ACCEPT
-A INPUT -p udp --dport 10000:20000 -j ACCEPT
-A INPUT -p tcp --dport 33808 -j ACCEPT

# 3. 特定业务 IP 白名单 - 【进】 (包含你补充的及日志新发现的)
-A INPUT -s 172.26.225.175/32 -j ACCEPT
-A INPUT -s 172.26.225.176/32 -j ACCEPT
-A INPUT -s 172.26.225.177/32 -j ACCEPT
-A INPUT -s 172.26.225.178/32 -j ACCEPT
-A INPUT -s 61.158.166.35/32 -j ACCEPT
-A INPUT -s 61.158.166.40/32 -j ACCEPT
-A INPUT -s 61.158.166.41/32 -j ACCEPT
-A INPUT -s 61.158.166.42/32 -j ACCEPT
-A INPUT -s 61.158.166.43/32 -j ACCEPT
-A INPUT -s 61.158.166.44/32 -j ACCEPT
-A INPUT -s 61.158.166.45/32 -j ACCEPT
-A INPUT -s 61.158.166.46/32 -j ACCEPT
-A INPUT -s 61.158.237.49/32 -j ACCEPT
-A INPUT -s 61.158.237.50/32 -j ACCEPT
-A INPUT -s 61.158.237.51/32 -j ACCEPT
-A INPUT -s 8.130.15.135/32 -j ACCEPT
-A INPUT -s 8.130.154.214/32 -j ACCEPT
-A INPUT -s 8.130.35.132/32 -j ACCEPT
-A INPUT -s 8.130.84.21/32 -j ACCEPT
-A INPUT -s 121.89.93.29/32 -j ACCEPT
-A INPUT -s 39.99.152.248/32 -j ACCEPT
-A INPUT -s 39.99.229.203/32 -j ACCEPT
-A INPUT -s 221.14.88.149/32 -j ACCEPT
-A INPUT -s 103.91.209.145/32 -j ACCEPT
-A INPUT -s 123.6.123.151/32 -j ACCEPT
-A INPUT -s 123.6.123.184/32 -j ACCEPT
-A INPUT -s 123.160.221.177/32 -j ACCEPT
-A INPUT -s 61.158.166.4/32 -j ACCEPT
-A INPUT -s 123.160.221.170/32 -j ACCEPT
-A INPUT -s 61.158.166.35/32 -j ACCEPT

# 4. 特定业务 IP 白名单 - 【出】
-A OUTPUT -d 61.158.237.50/32 -j ACCEPT
-A OUTPUT -d 125.46.39.209/32 -j ACCEPT
-A OUTPUT -d 61.158.237.49/32 -j ACCEPT
-A OUTPUT -d 61.158.237.52/32 -j ACCEPT
-A OUTPUT -d 61.158.237.53/32 -j ACCEPT
-A OUTPUT -d 121.89.93.29/32 -j ACCEPT
-A OUTPUT -d 103.91.209.145/32 -j ACCEPT
-A OUTPUT -d 123.6.123.151/32 -j ACCEPT
-A OUTPUT -d 123.6.123.184/32 -j ACCEPT
-A OUTPUT -d 123.160.221.177/32 -j ACCEPT
-A OUTPUT -d 61.158.166.4/32 -j ACCEPT
-A OUTPUT -d 123.160.221.170/32 -j ACCEPT
-A OUTPUT -d 61.158.166.35/32 -j ACCEPT



# 5. 管理端口 (SSH)
-A INPUT -p tcp --dport 51431 -j ACCEPT

# 日志审计
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "BLOCKED-INPUT: "

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
