iptables/iptables36
# Generated by iptables-save v1.4.21 on Mon Apr 13 17:50:59 2026
*mangle
:PREROUTING ACCEPT [778:315857]
:INPUT ACCEPT [778:315857]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [821:303126]
:POSTROUTING ACCEPT [821:303126]
COMMIT
# Completed on Mon Apr 13 17:50:59 2026
# Generated by iptables-save v1.4.21 on Mon Apr 13 17:50:59 2026
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -s 121.89.93.29/32 -j ACCEPT
-A INPUT -s 221.14.88.149/32 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 65511 -m limit --limit 3/min --limit-burst 3 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 65511 -j DROP
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A INPUT -s 103.85.86.119/32 -j ACCEPT
-A INPUT -s 103.219.30.130/32 -j ACCEPT
-A INPUT -s 27.148.147.12/32 -j ACCEPT
-A INPUT -s 120.79.208.109/32 -j ACCEPT
-A INPUT -s 202.189.8.139/32 -j ACCEPT
-A INPUT -s 47.107.163.168/32 -j ACCEPT
-A INPUT -s 47.95.217.241/32 -j ACCEPT
-A INPUT -s 60.205.224.139/32 -j ACCEPT
-A INPUT -s 61.158.237.51/32 -j ACCEPT
-A INPUT -s 123.6.78.103/32 -j ACCEPT
-A INPUT -s 125.47.41.251/32 -j ACCEPT
-A INPUT -s 125.47.41.243/32 -j ACCEPT
-A INPUT -s 125.47.41.242/32 -j ACCEPT
-A INPUT -s 39.99.152.248/32 -j ACCEPT
-A INPUT -s 39.99.229.203/32 -j ACCEPT
-A INPUT -s 61.158.166.35/32 -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "BLOCKED-INTPUT: "
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 221.14.88.149/32 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -j ACCEPT
-A OUTPUT -d 103.85.86.119/32 -j ACCEPT
-A OUTPUT -d 103.219.30.130/32 -j ACCEPT
-A OUTPUT -d 27.148.147.12/32 -j ACCEPT
-A OUTPUT -d 120.79.208.109/32 -j ACCEPT
-A OUTPUT -d 202.189.8.139/32 -j ACCEPT
-A OUTPUT -d 47.107.163.168/32 -j ACCEPT
-A OUTPUT -d 47.95.217.241/32 -j ACCEPT
-A OUTPUT -d 60.205.224.139/32 -j ACCEPT
-A OUTPUT -d 61.158.237.51/32 -j ACCEPT
-A OUTPUT -d 123.6.78.103/32 -j ACCEPT
-A OUTPUT -d 125.47.41.251/32 -j ACCEPT
-A OUTPUT -d 125.47.41.243/32 -j ACCEPT
-A OUTPUT -d 125.47.41.242/32 -j ACCEPT
-A OUTPUT -d 39.99.152.248/32 -j ACCEPT
-A OUTPUT -d 39.99.229.203/32 -j ACCEPT
-A OUTPUT -d 121.89.93.29/32 -j ACCEPT
-A OUTPUT -d 61.158.166.35/32 -j ACCEPT
-A OUTPUT -m limit --limit 5/min -j LOG --log-prefix "BLOCKED-OUTPUT: "
COMMIT
# Completed on Mon Apr 13 17:50:59 2026
# Generated by iptables-save v1.4.21 on Mon Apr 13 17:50:59 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [11:660]
:POSTROUTING ACCEPT [11:660]
COMMIT
# Completed on Mon Apr 13 17:50:59 2026
